--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,13 +12,13 @@
   <body>
 	<div class="container">
 		<p>
-			<a href="\html\autenticar.html">Autenticar</a>
+			<a id="autenticar" href="\html\autenticar.html">Autenticar</a>
 		</p>
 		<p>
-			<a href="\html\pesquisar_folheto.html">Pesquisar folheto</a>
+			<a id="pesquisar" href="\html\pesquisar_folheto.html">Pesquisar folheto</a>
 		</p>
 		<p>
-			<a href="\html\montar_folheto.html">Montar folheto</a>
+			<a id="montar_folheto" href="\html\montar_folheto.html">Montar folheto</a>
 		</p>
 	</div> <!-- div container -->
 
