commit from sh file

--- a/src/main/webapp/html/autenticar.html
+++ b/src/main/webapp/html/autenticar.html
@@ -36,13 +36,13 @@
 				  </label>
 				</div>
 				-->
-				<button class="btn btn-lg btn-primary btn-block" type="submit" onclick="document.getElementById('mensagem').innerHTML = 'Logado'">Logar</button>
+				<button id="logar" class="btn btn-lg btn-primary btn-block" type="submit" onclick="document.getElementById('mensagem').innerHTML = 'Logado'">Logar</button>
 			</form>
                         <div id="mensagem"></div>
 			<a href="..\index.html">Página inicial</a>
 	</div> <!-- div container -->
 	
-	<script src="..\js\autenticar.js"></script>
+	<!-- script src="..\js\autenticar.js"></script -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
