--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
   <body>
 	<div class="container">
 		<p>
-			<a id="autenticarSurge" href="\html\autenticar.html">Autenticar</a>
+			<a id="autenticar" href="\html\autenticar.html">AutenticarSurge</a>
 		</p>
 		<p>
 			<a id="pesquisar" href="\html\pesquisar_folheto.html">Pesquisar folheto</a>
