--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -12,13 +12,13 @@
   <body>
 	<div class="container">
 		<p>
-			<a id="autenticar" href="\html\autenticar.html">AutenticarSurge</a>
+			<a id="autenticar" href=".\php\autenticar.php">AutenticarTeste</a>
 		</p>
 		<p>
-			<a id="pesquisar" href="\html\pesquisar_folheto.html">Pesquisar folheto</a>
+			<a id="pesquisar" href=".\html\pesquisar_folheto.html">Pesquisar folheto</a>
 		</p>
 		<p>
-			<a id="montar_folheto" href="\html\montar_folheto.html">Montar folheto</a>
+			<a id="montar_folheto" href=".\html\montar_folheto.html">Montar folheto</a>
 		</p>
 	</div> <!-- div container -->
 
